--- a/.env.dev.yml
+++ b/.env.dev.yml
@@ -5,7 +5,7 @@ NODE_ENV: development
 TYPEORM_CONNECTION: postgres
 TYPEORM_HOST: localhost
 TYPEORM_PORT: 5432
-TYPEORM_USERNAME: docker
+TYPEORM_USERNAME: postgres
 TYPEORM_PASSWORD: docker
 TYPEORM_DATABASE: rocketseat_challenge
 TYPEORM_ENTITIES: dist/**/*.entity.js
