--- a/package.json
+++ b/package.json
@@ -21,19 +21,28 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/gateway": "^0.39.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^9.0.2",
     "@nestjs/microservices": "^8.0.6",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/graphql": "^14.5.0",
+    "apollo-server-express": "^3.3.0",
+    "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv-yaml": "^0.1.4",
+    "graphql": "^15.5.1",
     "kafkajs": "^1.15.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.1.6",
+    "ts-morph": "^12.0.0",
+    "type-graphql": "^1.1.1",
     "typeorm": "^0.2.37"
   },
   "devDependencies": {
